--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "prettier": "^1.19.1"
   },
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "prop-types": "^15.7.2"
+    "react-red": "0.0.1",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5"
   }
 }
