--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,14 +2,14 @@
   "extends": [
     "eslint:recommended",
     "plugin:import/errors",
-    "plugin:react/recommended",
-    "plugin:jsx-a11y/recommended",
     "prettier",
-    "prettier/react"
+    "prettier/react",
+    "plugin:jsx-a11y/recommended",
+    "plugin:react/recommended"
   ],
   "rules": {
-    "react/prop-types": 1,
-    "no-console": 1,
+    "react/prop-types": 0,
+    "no-console": 0,
     "react-hooks/rules-of-hooks": 2,
     "react-hooks/exhaustive-deps": 1
   },
