--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^16.12.0",
     "react-red": "0.0.1",
     "react-redux": "^7.1.3",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   }
 }
